--- a/src/app/components/square/square.module.css
+++ b/src/app/components/square/square.module.css
@@ -1,6 +1,7 @@
 .square {
   background: #fff;
   border: 1px solid #999;
+  border-radius: 0;
   float: left;
   font-size: 24px;
   font-weight: bold;
